After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738692 - Memory leak in argument handling and connect to server dialogue
Memory leak in argument handling and connect to server dialogue
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-17 14:22 UTC by David King
Modified: 2015-05-25 00:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
filename leak fix (829 bytes, patch)
2014-10-17 14:23 UTC, David King
none Details | Review
pointer array leak fix (813 bytes, patch)
2014-10-17 14:24 UTC, David King
none Details | Review

Description David King 2014-10-17 14:22:17 UTC
While investigating leaks with Valgrind. I fixed a couple.
Comment 1 David King 2014-10-17 14:23:32 UTC
Created attachment 288755 [details] [review]
filename leak fix
Comment 2 David King 2014-10-17 14:24:03 UTC
Created attachment 288756 [details] [review]
pointer array leak fix
Comment 3 Cosimo Cecchi 2015-05-25 00:23:34 UTC
Sorry for the long delay! I pushed these to master now.