connect-server-dialog: Fix a filename memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=738692